--- a/add-index.html
+++ b/add-index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    MY FIRST WEBSITE!
+    <title>MY FIRST WEBSITE!</title>
     </head>
   <body>
     Hello, awesome man!Welcom to github, Serene!
     </body>
   </html>
+  
