--- a/add-index.html
+++ b/add-index.html
@@ -3,7 +3,7 @@
     <title>MY FIRST WEBSITE!</title>
     </head>
   <body>
-    Hello, awesome man!Welcom to github, Serene!
+    Hello, awesome man!Welcom to github, Serene Sivy!
     </body>
   </html>
   
